# opentelemetry-prometheus-text-exporter

./: .rules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: codspeed.yml  release-plz.yml  test.yaml
benches/: README.md  comparison.md  comparison.rs  serialize.rs
src/: exporter.rs  lib.rs  resource_selector.rs  serialize.rs
tests/it/: main.rs
